/*
 * Copyright (C) 2021-2021 Huawei Technologies Co., Ltd. All rights reserved.
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.huawei.sermant.plugin.servermonitor.entity";

message ConnectionPoolCollection {
  string service = 1;
  string serviceInstance = 2;
  repeated ConnectionPool metrics = 3;
}

message ConnectionPool {
  int64 timestamp = 1;
  repeated DataSourceBean dataSourceBeans = 2;
}

message DataSourceBean {
  string name = 1;
  int32 activeCount = 2;
  int32 poolingCount = 3;
  int32 maxActive = 4;
  int32 initialSize = 5;
  string databasePeer = 6;
}